Fixes for require name

--- a/app/templates/wifidog/login.html
+++ b/app/templates/wifidog/login.html
@@ -21,7 +21,9 @@
 
         <fieldset>
             {{ render_group(form.voucher_code, required=True) }}
-            {{ render_group(form.name) }}
+            {% if gateway.login_ask_name %}
+                {{ render_group(form.name, required=gateway.login_require_name) }}
+            {% endif %}
             <div class="pure-controls">
                 <button type="submit" class="pure-button pure-button-primary">Go</button>
             </div>
