--- a/app/templates/broadcast.html
+++ b/app/templates/broadcast.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/default.html' %}
-{% from 'helpers/form.html' import render_field %}
+{% from 'helpers/form.html' import field %}
 
 {% block content %}
 <div class="panel panel-login">
@@ -10,7 +10,7 @@
             {{ form.csrf_token }}
 
             <fieldset class="pure-group">
-                {{ render_field(form.message, class='pure-input-1', placeholder='Message', required=True) }}
+                {{ field(form.message, class='pure-input-1', placeholder='Message', required=True) }}
             </fieldset>
 
             <button type="submit" class="pure-input-1 pure-button pure-button-primary">Go</button>
