--- a/app/templates/categories/index.html
+++ b/app/templates/categories/index.html
@@ -1,13 +1,53 @@
 {% extends 'layouts/default.html' %}
+{% import 'helpers/render.html' as render %}
 
-{% set title = 'Categories' %}
+{% set page_title = 'Categories' %}
+{% set new_title = 'New Category' %}
+{% set new_url = url_for('.categories_new') %}
 
-{% block head %}
-<!--[if lt IE 9]>
-<script>html5.addElements('categories')</script>
-<![endif]-->
-{% endblock %}
+{% set show_network = current_user.has_role('super-admin') %}
+{% set show_gateway = current_user.has_role('super-admin') or current_user.has_role('network-admin') %}
 
 {% block content %}
-<categories></categories>
+    <div class="content">
+        {% if instances %}
+            <table width="100%" cellspacing="0" class="pure-table pure-table-horizontal">
+                <thead>
+                    <tr>
+                        {% if show_network %}
+                            <th>Network</th>
+                        {% endif %}
+                        {% if show_gateway %}
+                            <th>Gateway</th>
+                        {% endif %}
+                        <th>Code</th>
+                        <th>Title</th>
+                        <th class="actions">Actions</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    {% for instance in instances %}
+                        <tr data-id={{ instance.id }} class={{ 'pure-table-' + loop.cycle('odd', 'even') }}>
+                            {% if show_network %}
+                                <td data-label="Network">{{ render.render(instance.network) }}</td>
+                            {% endif %}
+                            {% if show_gateway %}
+                                <td data-label="Gateway">{{ render.render(instance.gateway) }}</td>
+                            {% endif %}
+                            <td class="code" data-label="Code"><a href={{ url_for('.categories_edit', id=instance.id) }}>{{ instance.code }}</a></td>
+                            <td class="title" data-label="Title">{{ instance.title | default('-') }}</td>
+
+                            <td class="actions actions-instance">
+                                <a href={{ url_for('.categories_delete', id=instance.id) }} class="pure-button">
+                                    <span class="oi" data-glyph="x" title="Delete" aria-hidden="true"></span>
+                                    Delete
+                                </a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% endif %}
+    </div>
 {% endblock %}
