--- a/app/templates/helpers/form.html
+++ b/app/templates/helpers/form.html
@@ -1,20 +1,20 @@
-{% macro render_field(field) %}
-{{ field(**kwargs)|safe }}
+{% macro field(f) %}
+    {{ f(**kwargs) | safe }}
 
-{% if field.errors %}
-<div class="state state-invalid">
-    <span class="oi" data-glyph="x" title="X" aria-hidden="true"></span>
-    {{ field.errors | join('; ') }}
-</div>
-{% endif %}
+    {% if f.errors %}
+        <div class="state state-invalid">
+            <span class="oi" data-glyph="x" title="X" aria-hidden="true"></span>
+            {{ f.errors | join('; ') }}
+        </div>
+    {% endif %}
 {% endmacro %}
 
-{% macro render_group(field) %}
-<div class="pure-control-group">
-    {% if kwargs['required'] %}<b>{% endif %}{{ label or field.label }}{% if kwargs['required'] %}</b>{% endif %}
-    {{ render_field(field, **kwargs) }}
-    {% if field.description %}
-    <span class="description">{{ field.description }}</span>
-    {% endif %}
-</div>
+{% macro group(f) %}
+    <div class="pure-control-group">
+        {% if kwargs['required'] %}<b>{% endif %}{{ f.label }}{% if kwargs['required'] %}</b>{% endif %}
+        {{ field(f, **kwargs) }}
+        {% if f.description %}
+            <span class="description pure-form-message-inline">{{ f.description }}</span>
+        {% endif %}
+    </div>
 {% endmacro %}
