--- a/app/templates/networks/index.html
+++ b/app/templates/networks/index.html
@@ -1,13 +1,43 @@
 {% extends 'layouts/default.html' %}
+{% import 'helpers/render.html' as render %}
 
-{% set title = 'Networks' %}
-
-{% block head %}
-<!--[if lt IE 9]>
-<script>html5.addElements('networks')</script>
-<![endif]-->
-{% endblock %}
+{% set page_title = 'Networks' %}
+{% set new_title = 'New Network' %}
+{% set new_url = url_for('.networks_new') %}
 
 {% block content %}
-<networks></networks>
+    <div class="content">
+        {% if instances %}
+            <table id="networks" width="100%" cellspacing="0" class="pure-table pure-table-horizontal">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Title</th>
+                        <th>Description</th>
+                        <th>Created At</th>
+
+                        <th class="actions">Actions</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    {% for instance in instances %}
+                    <tr data-id={{ instance.id }} class="network {{ 'pure-table-' + loop.cycle('odd', 'even') }}">
+                        <td data-label="ID"><a href="{{ url_for('.networks_edit', id=instance.id) }}">{{ instance.id }}</a></td>
+                        <td data-label="Title">{{ render.render(instance.title) }}</td>
+                        <td data-label="Description">{{ render.render(instance.description) }}</td>
+                        <td data-label="Created At">{{ render.render(instance.created_at) }}</td>
+
+                        <td class="actions actions-instance">
+                            <a href="{{ url_for('.networks_delete', id=instance.id) }}" class="pure-button">
+                                <span class="oi" data-glyph="x" title="Delete" aria-hidden="true"></span>
+                                Delete
+                            </a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% endif %}
+    </div>
 {% endblock %}
