--- a/app/templates/vouchers/index.html
+++ b/app/templates/vouchers/index.html
@@ -1,13 +1,51 @@
 {% extends 'layouts/default.html' %}
+{% import 'helpers/render.html' as render %}
 
-{% set title = 'Vouchers' %}
-
-{% block head %}
-<!--[if lt IE 9]>
-<script>html5.addElements('vouchers')</script>
-<![endif]-->
-{% endblock %}
+{% set page_title = 'Vouchers' %}
+{% set new_title = 'New Voucher' %}
+{% set new_url = '/new-voucher' %}
 
 {% block content %}
-<vouchers></vouchers>
+    <div class="content">
+        {% if instances %}
+            <table id="vouchers" width="100%" cellspacing="0" class="pure-table pure-table-horizontal">
+                <thead>
+                    <tr>
+                        <th>Code</th>
+                        <th>Name</th>
+                        <th>S</th>
+                        <th>Times</th>
+                        <th>Minutes Left</th>
+                        <th style="text-align:right">Traffic (MB)</th>
+
+                        <th class="actions">Actions</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    {% for instance in instances %}
+                    <tr data-id="{{ instance.id }}" data-code="{{ instance.code }}" class="voucher {{ 'pure-table-' + loop.cycle('odd', 'even') }}">
+                            <td class="code" data-label="Code">{{ instance.code }}</td>
+                            <td class="name" data-label="Name">{{ instance.name or '-' }}</td>
+                            <td class="status" data-label="Status"><span class="oi" data-glyph={{ constants.STATUS_ICONS[instance.status] }} title={{ instance.status }} aria-hidden="true"></span></td>
+                            <td data-label="Times">{{ render.times(instance) }}</td>
+                            <td data-label="Minutes Left">{% if instance.status == 'active' %}{{ render.render(instance.time_left) + '/' }}{% endif %}{{ render.render(instance.minutes) }}</td>
+                            <td data-label="Traffic" style="text-align:right">{{ render.bytes(instance.incoming) }} in; {{ render.bytes(instance.outgoing) }} out; {{ render.bytes(instance.incoming + instance.outgoing) }} both</td>
+
+                            <td class="actions actions-instance">
+                                {% for action, defn in six.iteritems(instance.available_actions) %}
+                                <a href="{{ url_for('.vouchers_action', id=instance.id, action=action) }}" class="pure-button" title="{{ action }}">
+                                    {% if defn.icon %}
+                                    <span class="oi" data-glyph={{ defn.icon }} aria-hidden="true"></span>
+                                    {% endif %}
+                                    {{ action }}
+                                </a>
+                                {% endfor %}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% endif %}
+    </div>
 {% endblock %}
