--- a/app/templates/vouchers/new.html
+++ b/app/templates/vouchers/new.html
@@ -1,31 +1,27 @@
 {% extends 'layouts/default.html' %}
-{% from 'helpers/form.html' import render_field %}
+{% from 'helpers/form.html' import field %}
 
-{% set title = 'New Voucher' %}
+{% set page_title = 'New Voucher' %}
 
 {% block content %}
-<div class="header">
-    <h1>New Voucher</h1>
-</div>
+    <div class="content">
+        <div class="panel panel-voucher">
+            <div class="voucher-id">
+                {{ request.args.get('code') }}
+            </div>
 
-<div class="content">
-    <div class="panel panel-voucher">
-        <div class="voucher-id">
-            {{ request.args.get('code') }}
-        </div>
+            <div class="panel-body">
+                <form method="post" action={{ url_for('.vouchers_new') }} class="pure-form pure-form-stacked">
+                    {{ form.csrf_token }}
 
-        <div class="panel-body">
-            <form method="post" class="pure-form pure-form-stacked">
-                {{ form.csrf_token }}
+                    <fieldset class="pure-group">
+                        {{ field(form.gateway_id, class='pure-input-1', required=True) }}
+                        {{ field(form.minutes, class='pure-input-1', placeholder='Minutes', required=True) }}
+                    </fieldset>
 
-                <fieldset class="pure-group">
-                    {{ render_field(form.gateway_id, class='pure-input-1', required=True) }}
-                    {{ render_field(form.minutes, class='pure-input-1', placeholder='Minutes', required=True) }}
-                </fieldset>
-
-                <button type="submit" class="pure-input-1 pure-button pure-button-primary">Generate</button>
-            </form>
+                    <button type="submit" class="pure-input-1 pure-button pure-button-primary">Generate</button>
+                </form>
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
