add countries, some docker fixes, documentation

--- a/app/templates/countries/_form.html
+++ b/app/templates/countries/_form.html
@@ -3,9 +3,7 @@
 <fieldset>
     {{ group(form.id) }}
     {{ group(form.title) }}
-    {{ group(form.prefix) }}
-    {{ group(form.suffix) }}
-    {{ group(form.countries) }}
+    {{ group(form.currencies) }}
 
     <div class="pure-controls">
         <button type="submit" class="pure-button pure-button-primary">Ok</button>
