--- a/app/templates/countries/index.html
+++ b/app/templates/countries/index.html
@@ -1,9 +1,9 @@
 {% extends 'layouts/default.html' %}
 {% import 'helpers/render.html' as render %}
 
-{% set page_title = 'Currencies' %}
-{% set new_title = 'New Currency' %}
-{% set new_url = url_for('.currencies_new') %}
+{% set page_title = 'Countries' %}
+{% set new_title = 'New Country' %}
+{% set new_url = url_for('.countries_new') %}
 
 {% block content %}
     <div class="content">
@@ -13,9 +13,6 @@
                     <tr>
                         <th>ID</th>
                         <th>Title</th>
-                        <th>Prefix</th>
-                        <th>Suffix</th>
-                        <th>Countries</th>
                         <th class="actions">Actions</th>
                     </tr>
                 </thead>
@@ -23,14 +20,11 @@
                 <tbody>
                     {% for instance in instances %}
                         <tr data-id={{ instance.id }} class={{ 'pure-table-' + loop.cycle('odd', 'even') }}>
-                            <td class="id" data-label="ID"><a href={{ url_for('.currencies_edit', id=instance.id) }}>{{ instance.id }}</a></td>
+                            <td class="id" data-label="ID"><a href={{ url_for('.countries_edit', id=instance.id) }}>{{ instance.id }}</a></td>
                             <td class="title" data-label="Title">{{ instance.title }}</td>
-                            <td class="prefix" data-label="Prefix">{{ instance.prefix | default('-') }}</td>
-                            <td class="suffix" data-label="Suffix">{{ instance.suffix | default('-') }}</td>
-                            <td class="countries" data-label="Countries">{{ instance.countries|join(', ') }}</td>
 
                             <td class="actions actions-instance">
-                                <a href={{ url_for('.currencies_delete', id=instance.id) }} class="pure-button">
+                                <a href={{ url_for('.countries_delete', id=instance.id) }} class="pure-button">
                                     <span class="oi" data-glyph="x" title="Delete" aria-hidden="true"></span>
                                     Delete
                                 </a>
