add megabytes limit on a voucher

--- a/app/templates/vouchers/new.html
+++ b/app/templates/vouchers/new.html
@@ -17,6 +17,7 @@
                     <fieldset class="pure-group">
                         {{ field(form.gateway_id, class='pure-input-1', required=True) }}
                         {{ field(form.minutes, class='pure-input-1', placeholder='Minutes', required=True) }}
+                        {{ field(form.megabytes, class='pure-input-1', placeholder='Megabytes') }}
                     </fieldset>
 
                     <button type="submit" class="pure-input-1 pure-button pure-button-primary">Generate</button>
