--- a/app/templates/vouchers/index.html
+++ b/app/templates/vouchers/index.html
@@ -16,7 +16,7 @@
                         <th>S</th>
                         <th>Times</th>
                         <th>Minutes Left</th>
-                        <th style="text-align:right">Traffic (MB)</th>
+                        <th style="text-align:right">MB Used / Max</th>
 
                         <th class="actions">Actions</th>
                     </tr>
@@ -30,7 +30,7 @@
                             <td class="status" data-label="Status"><span class="oi" data-glyph={{ constants.STATUS_ICONS[instance.status] }} title={{ instance.status }} aria-hidden="true"></span></td>
                             <td data-label="Times">{{ render.times(instance) }}</td>
                             <td data-label="Minutes Left">{% if instance.status == 'active' %}{{ render.render(instance.time_left) + '/' }}{% endif %}{{ render.render(instance.minutes) }}</td>
-                            <td data-label="Traffic" style="text-align:right">{{ render.bytes(instance.incoming) }} in; {{ render.bytes(instance.outgoing) }} out; {{ render.bytes(instance.incoming + instance.outgoing) }} both</td>
+                            <td data-label="MB Used / Max" style="text-align:right">{{ render.bytes(instance.incoming + instance.outgoing) }} / {{ instance.megabytes }}</td>
 
                             <td class="actions actions-instance">
                                 {% for action, defn in six.iteritems(instance.available_actions) %}
