--- a/app/templates/layouts/default.html
+++ b/app/templates/layouts/default.html
@@ -42,6 +42,8 @@
                     {%- endif -%}
                     {%- endfor -%}
 
+                    {% include 'security/_menu.html' %}
+
                     {% if current_user.is_authenticated %}
                     <li class="pure-menu-item">
                         <a href="/logout" class="pure-menu-link">Logout</a>
