add defaults to gateway

--- a/app/templates/gateways/_form.html
+++ b/app/templates/gateways/_form.html
@@ -16,6 +16,9 @@
     {{ group(form.login_ask_name) }}
     {{ group(form.login_require_name) }}
 
+    {{ group(form.default_minutes) }}
+    {{ group(form.default_megabytes) }}
+
     <div class="pure-controls">
         <button type="submit" class="pure-button pure-button-primary">Ok</button>
         <button type="button" class="pure-button" onclick="history.back()">Cancel</button>
