--- a/app/templates/security/change_password.html
+++ b/app/templates/security/change_password.html
@@ -14,9 +14,9 @@
         <form action="{{ url_for_security('change_password') }}" method="POST" class="pure-form pure-form-stacked" name="change_password_form">
             {{ change_password_form.hidden_tag() }}
             <fieldset>
-                {{ group(forgot_password_form.password, class='pure-input-1') }}
-                {{ group(forgot_password_form.new_password, class='pure-input-1') }}
-                {{ group(forgot_password_form.new_password_confirm, class='pure-input-1') }}
+                {{ group(change_password_form.password, class='pure-input-1') }}
+                {{ group(change_password_form.new_password, class='pure-input-1') }}
+                {{ group(change_password_form.new_password_confirm, class='pure-input-1') }}
             </fieldset>
 
             <button id="submit" type="submit" class="pure-input-1 pure-button pure-button-primary">Recover Password</button>
