--- a/app/templates/security/reset_password.html
+++ b/app/templates/security/reset_password.html
@@ -11,14 +11,16 @@
 
 {% block content %}
     <div class="content">
-        <form action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" class="pure-form pure-form-stacked" name="login_user_form">
+        <form action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" class="pure-form pure-form-aligned" name="login_user_form">
             {{ reset_password_form.hidden_tag() }}
             <fieldset>
-                {{ group(reset_password_form.password, class='pure-input-1') }}
-                {{ group(reset_password_form.password_confirm, class='pure-input-1') }}
-            </fieldset>
+                {{ group(reset_password_form.password) }}
+                {{ group(reset_password_form.password_confirm) }}
 
-            <button id="submit" type="submit" class="pure-input-1 pure-button pure-button-primary">Recover Password</button>
+                <div class="pure-controls">
+                    <button id="submit" type="submit" class="pure-button pure-button-primary">Recover Password</button>
+                </div>
+            </fieldset>
         </form>
     </div>
 {% endblock %}
