--- a/app/templates/security/forgot_password.html
+++ b/app/templates/security/forgot_password.html
@@ -11,13 +11,15 @@
 
 {% block content %}
     <div class="content">
-        <form action="{{ url_for_security('forgot_password') }}" method="POST" class="pure-form pure-form-stacked" name="forgot_password_form">
+        <form action="{{ url_for_security('forgot_password') }}" method="POST" class="pure-form pure-form-aligned" name="forgot_password_form">
             {{ forgot_password_form.hidden_tag() }}
             <fieldset>
-                {{ group(forgot_password_form.email, class='pure-input-1') }}
+                {{ group(forgot_password_form.email) }}
             </fieldset>
 
-            <button id="submit" type="submit" class="pure-input-1 pure-button pure-button-primary">Recover Password</button>
+            <div class="pure-controls">
+                <button id="submit" type="submit" class="pure-button pure-button-primary">Recover Password</button>
+            </div>
         </form>
     </div>
 {% endblock %}
