--- a/app/templates/security/login_user.html
+++ b/app/templates/security/login_user.html
@@ -11,20 +11,22 @@
 
 {% block content %}
     <div class="content">
-        <form action="{{ url_for_security('login') }}" method="POST" class="pure-form pure-form-stacked" name="login_user_form">
+        <form action="{{ url_for_security('login') }}" method="POST" class="pure-form pure-form-aligned" name="login_user_form">
             {{ login_user_form.next | safe }}
             {{ login_user_form.hidden_tag() }}
             <fieldset>
-                {{ group(login_user_form.email, class='pure-input-1') }}
-                {{ group(login_user_form.password, class='pure-input-1') }}
+                {{ group(login_user_form.email) }}
+                {{ group(login_user_form.password) }}
 
-                <label for="remember" class="pure-checkbox">
-                    <input id="remember" type="checkbox" name="remember" value="y" />
-                    Remember Me
-                </label>
+                <div class="pure-controls">
+                    <label for="remember" class="pure-checkbox">
+                        <input id="remember" type="checkbox" name="remember" value="y" />
+                        Remember Me
+                    </label>
+
+                    <button id="submit" type="submit" class="pure-button pure-button-primary">Go</button>
+                </div>
             </fieldset>
-
-            <button id="submit" type="submit" class="pure-input-1 pure-button pure-button-primary">Go</button>
         </form>
     </div>
 {% endblock %}
