--- a/app/templates/security/send_confirmation.html
+++ b/app/templates/security/send_confirmation.html
@@ -11,13 +11,15 @@
 
 {% block content %}
     <div class="content">
-        <form action="{{ url_for_security('send_confirmation') }}" method="POST" class="pure-form pure-form-stacked" name="send_confirmation_form">
+        <form action="{{ url_for_security('send_confirmation') }}" method="POST" class="pure-form pure-form-aligned" name="send_confirmation_form">
             {{ send_confirmation_form.hidden_tag() }}
             <fieldset>
                 {{ group(send_confirmation_form.email, class='pure-input-1') }}
-            </fieldset>
 
-            <button id="submit" type="submit" class="pure-input-1 pure-button pure-button-primary">Resend Confirmation Instructions</button>
+                <div class="pure-controls">
+                    <button id="submit" type="submit" class="pure-input-1 pure-button pure-button-primary">Resend Confirmation Instructions</button>
+                </div>
+            </fieldset>
         </form>
     </div>
 {% endblock %}
