dataLayer for events

--- a/app/templates/security/login_user.html
+++ b/app/templates/security/login_user.html
@@ -36,7 +36,11 @@
         Zepto(function($) {
             $('#auth-login').on('click', function(e) {
                 console.log('send event auth login');
-                ga('send', 'event', 'auth', 'login');
+                dataLayer.push({
+                    event: 'trackEvent',
+                    eventCategory: 'auth',
+                    eventAction: 'login'
+                });
             });
         });
     </script>
