--- a/app/templates/wifidog/login.html
+++ b/app/templates/wifidog/login.html
@@ -39,7 +39,11 @@
         Zepto(function ($) {
             $('#voucher-login').on('click', function (e) {
                 console.log('send event voucher login');
-                ga('send', 'event', 'voucher', 'login');
+                dataLayer.push({
+                    event: 'trackEvent',
+                    eventCategory: 'voucher',
+                    eventAction: 'login'
+                });
             });
         });
     </script>
