--- a/app/templates/layouts/default.html
+++ b/app/templates/layouts/default.html
@@ -106,7 +106,11 @@
 
         $('#auth-logout').on('click', function(e) {
             console.log('send event auth logout');
-            ga('send', 'event', 'auth', 'logout');
+            dataLayer.push({
+                event: 'trackEvent',
+                eventCategory: 'auth',
+                eventAction: 'logout'
+            });
         });
 
         setupNotifications();
