--- a/app/templates/security/reset_password.html
+++ b/app/templates/security/reset_password.html
@@ -14,8 +14,8 @@
         <form action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" class="pure-form pure-form-aligned" name="login_user_form">
             {{ reset_password_form.hidden_tag() }}
             <fieldset>
-                {{ group(reset_password_form.password) }}
-                {{ group(reset_password_form.password_confirm) }}
+                {{ group(reset_password_form.password, autocomplete="off") }}
+                {{ group(reset_password_form.password_confirm, autocomplete="off") }}
 
                 <div class="pure-controls">
                     <button id="submit" type="submit" class="pure-button pure-button-primary">Recover Password</button>
