--- a/app/templates/users/index.html
+++ b/app/templates/users/index.html
@@ -26,7 +26,7 @@
                         {{ form.gateway }}
                     {% endif %}
                     {{ form.email }}
-                    {{ form.password }}
+                    {{ form.password(autocomplete="off") }}
                     <button type="submit" class="pure-button pure-button-primary">
                         <span class="oi" data-glyph="file" title="Create" aria-hidden="true"></span>
                         Create
