--- a/app/templates/security/login_user.html
+++ b/app/templates/security/login_user.html
@@ -16,7 +16,7 @@
             {{ login_user_form.hidden_tag() }}
             <fieldset>
                 {{ group(login_user_form.email) }}
-                {{ group(login_user_form.password) }}
+                {{ group(login_user_form.password, autocomplete="off") }}
 
                 <div class="pure-controls">
                     <label for="remember" class="pure-checkbox">
