--- a/app/templates/security/send_confirmation.html
+++ b/app/templates/security/send_confirmation.html
@@ -14,10 +14,10 @@
         <form action="{{ url_for_security('send_confirmation') }}" method="POST" class="pure-form pure-form-aligned" name="send_confirmation_form">
             {{ send_confirmation_form.hidden_tag() }}
             <fieldset>
-                {{ group(send_confirmation_form.email, class='pure-input-1') }}
+                {{ group(send_confirmation_form.email) }}
 
                 <div class="pure-controls">
-                    <button id="submit" type="submit" class="pure-input-1 pure-button pure-button-primary">Resend Confirmation Instructions</button>
+                    <button id="submit" type="submit" class="pure-button pure-button-primary">Resend Confirmation Instructions</button>
                 </div>
             </fieldset>
         </form>
