fix missing title

--- a/auth/templates/layouts/default.html
+++ b/auth/templates/layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"/>
-<title>{{ title }} - Wifidog Auth</title>
+<title>{{ title | default(page_title) }} - Wifidog Auth</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
